--- a/pom.xml
+++ b/pom.xml
@@ -26,10 +26,18 @@
       <artifactId>jdom</artifactId>
       <version>1.1.3</version>
     </dependency>
+
+
     <dependency>
       <groupId>cglib</groupId>
       <artifactId>cglib</artifactId>
       <version>3.2.4</version>
+    </dependency>
+
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>5.1.38</version>
     </dependency>
 
   </dependencies>
