--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,20 @@
       <version>5.1.38</version>
     </dependency>
 
+
+    <!--添加lombok支持-->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.16.14</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>3.6.0</version>
+    </dependency>
+
   </dependencies>
 
   <build>
