--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,22 @@
       <version>3.6.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>commons-logging</groupId>
+      <artifactId>commons-logging</artifactId>
+      <version>1.1.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.9</version>
+    </dependency>
+
+
+
+
+
   </dependencies>
 
   <build>
