--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <spring.version>4.1.6.RELEASE</spring.version>
+    <guava.version>18.0</guava.version>
   </properties>
 
   <dependencies>
@@ -28,7 +29,6 @@
       <version>1.1.3</version>
     </dependency>
 
-
     <dependency>
       <groupId>cglib</groupId>
       <artifactId>cglib</artifactId>
@@ -40,7 +40,6 @@
       <artifactId>mysql-connector-java</artifactId>
       <version>5.1.38</version>
     </dependency>
-
 
     <!--添加lombok支持-->
     <dependency>
@@ -56,7 +55,6 @@
     </dependency>
 
     <!--log4j-->
-
     <dependency>
       <groupId>commons-logging</groupId>
       <artifactId>commons-logging</artifactId>
@@ -70,7 +68,6 @@
     </dependency>
 
     <!--Spring-->
-
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
@@ -101,9 +98,6 @@
       <version>1.2.2</version>
     </dependency>
 
-
-
-
     <dependency>
       <groupId>org.aspectj</groupId>
       <artifactId>aspectjrt</artifactId>
@@ -131,13 +125,17 @@
       <version>1.6.1</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.1.39</version>
+    </dependency>
 
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-core</artifactId>
       <version>2.6.5</version>
     </dependency>
-
 
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
@@ -169,8 +167,11 @@
       <version>1.7.20</version>
     </dependency>
 
-
-
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>${guava.version}</version>
+    </dependency>
 
   </dependencies>
 
